[update] remove node when deadline

--- a/conf/config.json
+++ b/conf/config.json
@@ -3,19 +3,19 @@
     "PING": [
       {
         "ID": "PING",
-        "ProcessID": "develop"
+        "ProcessID": "d1"
       }
     ],
     "PONG": [
       {
         "ID": "PONG",
-        "ProcessID": "develop"
+        "ProcessID": "d2"
       }
     ]
   },
   "Rpc": {
     "MaxCoroutine": 10000,
-    "RpcExpired": 20,
+    "RpcExpired": 3,
     "LogSuccess": false
   }
 }
