TODO Imp redis registry

--- a/conf/config.json
+++ b/conf/config.json
@@ -3,13 +3,13 @@
     "PING": [
       {
         "ID": "PING",
-        "ProcessID": "d1"
+        "ProcessID": "develop"
       }
     ],
     "PONG": [
       {
         "ID": "PONG",
-        "ProcessID": "d2"
+        "ProcessID": "develop"
       }
     ]
   },
