[update] 1. remove process id 2. remake redis register function 3. rename ugly name

--- a/conf/config.json
+++ b/conf/config.json
@@ -1,6 +1,7 @@
 {
   "Log":{
     "file":{
+      "prefix" : "develop",
       "daily" : true,
       "level" : 6
     }
@@ -21,7 +22,7 @@
   },
   "Rpc": {
     "MaxCoroutine": 10000,
-    "RpcExpired": 3,
+    "RpcExpired": 1,
     "LogSuccess": false
   }
 }
