--- a/conf/config.json
+++ b/conf/config.json
@@ -1,21 +1,26 @@
 {
+  "Log":{
+    "file":{
+      "prefix" : "develop",
+      "daily" : true,
+      "level" : 6
+    }
+  },
   "Module": {
     "PING": [
       {
-        "ID": "PING",
-        "ProcessID": "d1"
+        "ID": "PING"
       }
     ],
     "PONG": [
       {
-        "ID": "PONG",
-        "ProcessID": "d2"
+        "ID": "PONG"
       }
     ]
   },
   "Rpc": {
     "MaxCoroutine": 10000,
-    "RpcExpired": 3,
+    "RpcExpired": 10,
     "LogSuccess": false
   }
 }
