[update] 直接執行app.run內module, config若有設定只會讀取setting中資料

--- a/conf/config.json
+++ b/conf/config.json
@@ -2,12 +2,15 @@
   "Module": {
     "PING": [
       {
-        "ID": "PING"
+        "Settings": {
+          "echo" : "Answer From config.json"
+        }
       }
     ],
     "PONG": [
       {
-        "ID": "PONG"
+        "Settings": {
+        }
       }
     ]
   },
